# rircd

./: Cargo.toml
src/: channel.rs  endpoint.rs  event.rs  main.rs  message.rs  server.rs  user.rs
src/irc/: channel.rs  connection.rs  endpoint.rs  event.rs  mod.rs  user.rs
src/shell/: mod.rs
