[package]
name = "rircd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0" , features = [ "full" ] }
color-eyre = "0.6.0"
async-trait = "0.1.52"
futures = "0.3.19"
async-stream = "0.3.2"
tokio-util = "0.6.9"
log = "0.4.14"
env_logger = "0.9.0"

# I mean why reinvent the wheel
ellidri-reader = "0.1.0"
